<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/gpsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpsCheckBox" />

    <CheckBox
        android:id="@+id/galileoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galileoCheckBox" />

    <CheckBox
        android:id="@+id/glonassCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glonassCheckBox" />

    <CheckBox
        android:id="@+id/unknownCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknownCheckBox" />

    <CheckBox
        android:id="@+id/usedInFixCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usedInFixCheckBox" />

    <CheckBox
        android:id="@+id/notUsedInFixCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notUsedInFixCheckBox" />

</LinearLayout>
