<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:text="@string/textQuiz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="144dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_gnss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_gnss" />

        <Button
            android:id="@+id/button_activitity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_activitity2" />

        <Button
            android:id="@+id/button_activitity3"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/button_activitity3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>