<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textviewLocation_id"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/textLoading" />

    <TextView
        android:id="@+id/textDisplacement_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Graus:" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textLocationNorth"
            android:text="@string/northLocation"
            android:layout_width="38dp"
            android:layout_height="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/textLocationWest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/westLocation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/compassArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/compassArrow"
            android:layout_width="135dp"
            android:layout_height="69dp"
            android:contentDescription="arrow"
            android:src="@drawable/ic_arrow"
            android:translationX="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLocationEast"
            android:text="@string/eastLocation"
            android:layout_width="43dp"
            android:layout_height="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/compassArrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/southLocation"
            android:id="@+id/textLocationSouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.locationapi.EsferaCelesteView
        android:id="@+id/esferacelesteview_id"
        android:layout_width="match_parent"
        android:layout_height="272dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="33dp">

        <TextView
            android:id="@+id/textConstellationsLegend_id"
            android:layout_width="185dp"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/textConstellationsLegend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">

        <TextView
            android:id="@+id/textRedLegend"
            android:layout_width="224dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/redLegend"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="224dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/greenLegend"
            android:textColor="#21fa00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="224dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/greyLegend"
            android:textColor="#808080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="224dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yellowLegend"
            android:textColor="#FFFF00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.github.mikephil.charting.charts.ScatterChart
        android:id="@+id/scatterChart"
        android:layout_width="match_parent"
        android:layout_height="241dp" />

</LinearLayout>